Fix contrast issues in sdc-ui
- fix all contrast issues in sdc ui to make the
  ui more accessible

Issue-ID: SDC-4801

--- a/catalog-ui/src/app/ng2/components/layout/top-nav/top-nav.component.less
+++ b/catalog-ui/src/app/ng2/components/layout/top-nav/top-nav.component.less
@@ -132,7 +132,7 @@
               font-weight: bold;
             }
             &:hover {
-              color: @main_color_a;
+              color: @main_color_b; // Changed from @main_color_a (#009fdb) to meet WCAG AA 4.5:1 contrast
             }
             span {
               height: 35px;
