--- a/catalog-ui/src/app/ng2/components/logic/hierarchy-navigtion/hierarchy-navigation.component.less
+++ b/catalog-ui/src/app/ng2/components/logic/hierarchy-navigtion/hierarchy-navigation.component.less
@@ -46,9 +46,9 @@
 .node-data-icon {
     vertical-align: middle;
     margin-right: 7px;
-    
+
     &.defaulticon.small {
-        background-color: #999;  
+        background-color: #999;
         border-radius: 14px;
     }
 }
@@ -57,7 +57,7 @@
     background-color: #e6f6fb;
 
     .node-data {
-        color:  #009fdb;
+        color:  #056bae; // Darkened from #009fdb to meet WCAG AA 4.5:1 contrast
     }
 }
 
@@ -87,4 +87,3 @@
         content: "P";
     }
 }
-
