--- a/catalog-ui/src/app/ng2/components/logic/outputs-table/outputs-table.component.less
+++ b/catalog-ui/src/app/ng2/components/logic/outputs-table/outputs-table.component.less
@@ -77,7 +77,7 @@
 
     /deep/ .selected {
       background-color: #e6f6fb;
-      color: #009fdb;
+      color: #056bae; // Darkened from #009fdb to meet WCAG AA 4.5:1 contrast
     }
   }
 
