--- a/catalog-ui/src/app/ng2/pages/catalog/catalog.component.less
+++ b/catalog-ui/src/app/ng2/pages/catalog/catalog.component.less
@@ -58,7 +58,7 @@
 }
 
 .sdc-catalog-selector-item:hover {
-  color: @main_color_a;
+  color: @main_color_b; // Changed from @main_color_a (#009fdb) to meet WCAG AA 4.5:1 contrast
   background-color: @tlv_color_v;
 }
 
@@ -71,7 +71,7 @@
   font-family: OpenSans-Bold, sans-serif;
   font-size: 14px;
 
-  color:  @main_color_a;
+  color:  @main_color_b; // Changed from @main_color_a (#009fdb) to meet WCAG AA 4.5:1 contrast
   background-color: @tlv_color_t;
   border: solid 1px fade(@main_color_t, 40%);
   cursor: pointer;
