--- a/catalog-ui/src/app/ng2/pages/service-consumption-editor/service-consumption-editor.component.less
+++ b/catalog-ui/src/app/ng2/pages/service-consumption-editor/service-consumption-editor.component.less
@@ -16,8 +16,8 @@
   .expand-collapse-all {
     display: flex;
     .expand-all, .collapse-all {
-      color: @main_color_a;
-      border-bottom: solid 1px @main_color_a;
+      color: @main_color_b; // Changed from @main_color_a (#009fdb) to meet WCAG AA 4.5:1 contrast
+      border-bottom: solid 1px @main_color_b;
       font-size: 12px;
       font-family: @font-opensans-regular;
       cursor: pointer;
