--- a/catalog-ui/src/app/ng2/pages/workspace/disribution/distribution-component-table/distribution-component-table.component.less
+++ b/catalog-ui/src/app/ng2/pages/workspace/disribution/distribution-component-table/distribution-component-table.component.less
@@ -11,7 +11,7 @@
 }
 
 .blue {
-  color: #009fdb;
+  color: #056bae; // Darkened from #009fdb to meet WCAG AA 4.5:1 contrast
   font-family: OpenSans-Semibold, sans-serif;
   font-size: 14px;
 }
@@ -60,7 +60,3 @@
   font-family: OpenSans-Regular, sans-serif;
   font-size: 14px;
 }
-
-
-
-
